# ChangeLog for dev-db/jxtray
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/jxtray/ChangeLog,v 1.34 2011/08/07 11:58:24 xarthisius Exp $

  07 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> jxtray-0.5-r4.ebuild:
  Dropped ppc/ppc64 wrt #326091

  07 Nov 2009; Vlastimil Babka <caster@gentoo.org> jxtray-0.5-r4.ebuild:
  Change JDK dep to allow 1.6 as well.

  22 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> jxtray-0.5-r4.ebuild:
  Migrated to EAPI-1 and restricted to dev-java/poi:0 because of slotting
  dev-java/poi-3.2

  20 Aug 2007; Vlastimil Babka <caster@gentoo.org> jxtray-0.5-r4.ebuild:
  Remove bad -r from dojavadoc call, reported by opfer in bug #189277.

  15 Jul 2007; Petteri Räty <betelgeuse@gentoo.org> -jxtray-0.5-r2.ebuild,
  -jxtray-0.5-r3.ebuild:
  Remove old revisions.

  15 Jul 2007; nixnut <nixnut@gentoo.org> jxtray-0.5-r4.ebuild:
  Stable on ppc wrt bug 182176

  17 Jun 2007; Christoph Mende <angelos@gentoo.org> jxtray-0.5-r4.ebuild:
  Stable on amd64 wrt bug 182176

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jxtray-0.5-r4.ebuild:
  stable x86, bug 182176

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jxtray-0.5-r4.ebuild:
  Added ~ppc, bug #175994

  06 Jun 2007; Markus Rothe <corsair@gentoo.org> jxtray-0.5-r4.ebuild:
  Added ~ppc64; bug #175994

*jxtray-0.5-r4 (25 Apr 2007)

  25 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> +jxtray-0.5-r4.ebuild:
  Use a newer version of jtds. It wouldn't have needed a new slot but what's
  done is done.

  12 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> -jxtray-0.5-r1.ebuild:
  Remove old version so that we can package.mask dev-java/jdbc3-postgresql.

  12 Apr 2007; Christian Faulhammer <opfer@gentoo.org> jxtray-0.5-r2.ebuild:
  stable amd64, bug 160569

  02 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> jxtray-0.5-r3.ebuild:
  Prefer virtual/jdk-1.5 over virtual/jdk-1.4
