@@ -1,6 +1,6 @@
 AUX build.xml 1599 SHA256 4a134433577e5bca6f66851878f2359b01e5d0692d34143b4834d9cec09730cc SHA512 c5905d181b74135ffa5ed649caa159e204ea3c5bcd5770d734fdec50b7b4a85f6c112812f80ccaac5e96052e4a51eeef8276eaf093e235318b49106d957aa166 WHIRLPOOL cb3c1080ebfcb894f6057655eda94977e0ea08a1f13cac76cf0694bfc5a08ac9d12e1e763bee67c4f787feb5a01684ea25f93cb8c909e4e40d690f9711a5da6e
 AUX default.properties 109 SHA256 bd4f5887a65b1db47d2546b32ada76f9df2311bf5f9e383cacf576c57a88c4fd SHA512 a55c6a95988eca764af067131903c39baa07d0b3bdf841c7af4317a881b40bdaa71047d91cf736a5ce03da43fddcdbf282e139c0e69e52d4fdc3e7e2803f14fa WHIRLPOOL 62c359f6c874a2a5d54c86abe3ac4a53d308a07e63631a8143fe08fca30d7c1ea6abf2743e3bf4a1d4da8f3e7a333be1e79ff9ccb0f24e633a183ad438668b22
 DIST jxtray-src-0.5.tgz 2476739 SHA256 ddb5d2b2399d1440d84b144fce4ef4f7ff865081745057e101deff3a38f0a849 SHA512 11af9c74a12786b7e34890ae3ebfc3f5631c247cf693add5884db05bd63ccd021f613f696ecbcaff606e2567d43070baf73197fb7675e7a15fe45923773ebe6f WHIRLPOOL 3a5b32545a22061a7691faf45ce0a542691bb67f0e8299937bd032a46f9b71dcda1cd5ad6c4343954a4dfddd76bf7a6630a679f04b42fff3e5c7a84b50abde34
-EBUILD jxtray-0.5-r4.ebuild 1949 SHA256 01e4d12f96efc7de9b35c134793ab4aaa28a657ddea32a175f863cf1cbff99a4 SHA512 7e872e027ff0a73744f124c51ac333b792e8432d7754305a9707aad4f2978b0e95e74edded444c97633c413058cce0f8c766f645c9243b7ad3a80414d0a4fc6c WHIRLPOOL 7b9bddce30eff160789bcc6b12948a6a167b92e9c3e81dd9789f5f8b771368fe8235eef612a10a03dc365671d3558ced9c33de76956d8aa5f525b27e476f6a5f
-MISC ChangeLog 4904 SHA256 930995c7111729976fde013bc12de0a86efd3a67ab2703f35c4f2241d9e9dd69 SHA512 bef71b5482b0d6533992b4749f8ad1f45b57606fac4b7d6ac01a828af10d0c831d645d4845c6050145f66cb7a01d007cded0cf6b53ab9f134ed494e0840dd2ed WHIRLPOOL b454a42ee73a0357937224470015e33b3fe730480de32e8c73215177d886f5d8e7f26b3ca3e3d8b834d8f5c123cdd5362adc3929e85ae7601507a54244364355
+EBUILD jxtray-0.5-r4.ebuild 1945 SHA256 135977b46eca6e700db20f6b17099021d303929f4be2e3f5ed379ce7e8700a93 SHA512 213e5ebf447d949a911437930d7836f45f808d68f208de738849f63607ea5f1c3af3128961c75960aa7389f686c1fc9454b379d10bbbb4f3cb17917865165ff7 WHIRLPOOL 4f7c5d8bd1c58a1ef73f7c20be6693fb9a5966f65200bcd0e57b0c31fdc4a2261135a7c9ae9f3936a9b7599490b453222bb71d45e7db2184a34516797a4a7f8a
+MISC ChangeLog 5012 SHA256 ab7d8310051aa699962056ad700328becbfeb9e35dcdc4035703739aa37fe7b0 SHA512 268569e22b288c46d813da6f4595322a794d0c26390cb3af1c74499c2e3dcdfc78c16d37a77f54850c841ad0952aed820302a825467631a5916ebb950255448d WHIRLPOOL ef313f0ae22d3c2ee6a49d2c94a37306457014590418b4853af130102d9e2398d3989d3f1db4a5d95a766adcff547b062bdb846a404d2262e3429ecc43e4206e
 MISC metadata.xml 586 SHA256 4be3c32bfe30ef7b3d9c516caf50be3c23508dac87bf643edfcd0835f68a4aaf SHA512 3c81a2247c13239eae6f2ef85f77bba526159d64a9c9b80a1d5b82df159236a8745c0df03edb15891b366df83adf1a928e911015cefba1b195dde172ce3836cd WHIRLPOOL 8a01a2bedaab61cbada7f0dd0819d4309799cd71b28ec78376b0937f400d72e7d93ce4f61f2c5a99825dc5d4b8762dd1e27987a76905aeb30ee26e9a8a8936e6
