@@ -1,13 +1,13 @@
-DEFINED_PHASES=compile install preinst setup unpack
-DEPEND=>=virtual/jdk-1.4 >=dev-java/jdom-1.0:1.0 >=dev-java/kunststoff-2.0.2:2.0 dev-java/poi:0 dev-java/sax:0 >=dev-java/xerces-2.7:2 dev-java/xml-commons:0 firebird? ( dev-java/jdbc-jaybird:0 ) mssql? ( >=dev-java/jtds-1.2:1.2 ) mysql? ( dev-java/jdbc-mysql:0 ) postgres? ( dev-java/jdbc-postgresql:0 ) !firebird? ( !mssql? ( !postgres? ( dev-java/jdbc-mysql:0 ) ) ) >=dev-java/java-config-2.1.9-r1 >=sys-apps/portage-2.1.2.7 >=dev-java/ant-core-1.8.2 >=sys-apps/portage-2.1.2.7 >=dev-java/javatoolkit-0.3.0-r2
+DEFINED_PHASES=compile configure install preinst prepare setup unpack
+DEPEND=>=virtual/jdk-1.4 >=dev-java/jdom-1.0:1.0 >=dev-java/kunststoff-2.0.2:2.0 dev-java/poi:0 dev-java/sax:0 >=dev-java/xerces-2.7:2 dev-java/xml-commons:0 firebird? ( dev-java/jdbc-jaybird:0 ) mssql? ( >=dev-java/jtds-1.2:1.2 ) mysql? ( dev-java/jdbc-mysql:0 ) postgres? ( dev-java/jdbc-postgresql:0 ) !firebird? ( !mssql? ( !postgres? ( dev-java/jdbc-mysql:0 ) ) ) >=dev-java/java-config-2.1.9-r1 >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Java based Database Explorer
-EAPI=1
+EAPI=5
 HOMEPAGE=http://jxtray.sourceforge.net
 IUSE=doc firebird mssql mysql postgres elibc_FreeBSD elibc_FreeBSD
 KEYWORDS=amd64 x86
 LICENSE=GPL-2
-RDEPEND=>=virtual/jre-1.4 >=dev-java/jdom-1.0:1.0 >=dev-java/kunststoff-2.0.2:2.0 dev-java/poi:0 dev-java/sax:0 >=dev-java/xerces-2.7:2 dev-java/xml-commons:0 firebird? ( dev-java/jdbc-jaybird:0 ) mssql? ( >=dev-java/jtds-1.2:1.2 ) mysql? ( dev-java/jdbc-mysql:0 ) postgres? ( dev-java/jdbc-postgresql:0 ) !firebird? ( !mssql? ( !postgres? ( dev-java/jdbc-mysql:0 ) ) ) >=dev-java/java-config-2.1.9-r1 >=sys-apps/portage-2.1.2.7
+RDEPEND=>=virtual/jre-1.4 >=dev-java/jdom-1.0:1.0 >=dev-java/kunststoff-2.0.2:2.0 dev-java/poi:0 dev-java/sax:0 >=dev-java/xerces-2.7:2 dev-java/xml-commons:0 firebird? ( dev-java/jdbc-jaybird:0 ) mssql? ( >=dev-java/jtds-1.2:1.2 ) mysql? ( dev-java/jdbc-mysql:0 ) postgres? ( dev-java/jdbc-postgresql:0 ) !firebird? ( !mssql? ( !postgres? ( dev-java/jdbc-mysql:0 ) ) ) >=dev-java/java-config-2.1.9-r1
 SLOT=0
 SRC_URI=mirror://sourceforge/jxtray/jxtray-src-0.5.tgz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=1b4a12a41cadfba016529d0d96e5873c
+_md5_=a8a27c5120685db11f299d9d1ea76a08
